--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -45,7 +45,8 @@ jobs:
           ${{ runner.os }}-pip-
     - name: Get Branch from environment
       run: |
-        echo "BRANCH=$(echo ${GITHUB_REF} | egrep -o "[^/]*$")" >> $GITHUB_ENV
+        CODE="from scripts.utils import get_branch; print(get_branch())"
+        echo "BRANCH=$(python -c $CODE}) >> $GITHUB_ENV
         cat ${GITHUB_ENV}
     - name: Prep Git
       run: |
@@ -77,7 +78,8 @@ jobs:
         twine upload --repository-url ${REGISTRY} --skip-existing dist/*
     - name: Extract Final Version
       run: |
-        echo "FINAL_VERSION=$(echo ${VERSION} | egrep "[0-9]+\.[0-9]+\.[0-9]+")" >> $GITHUB_ENV
+        RUNNER="python -m scripts/get_final_version.py"
+        echo "FINAL_VERSION=$(${RUNNER} ${VERSION})" >> $GITHUB_ENV
         cat ${GITHUB_ENV}
     - name: Push changes
       uses: ad-m/github-push-action@master
