--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -44,16 +44,17 @@ jobs:
       run: |
         # Release check needs to run in both PR and Push
         if [[ -z ${GITHUB_BASE_REF} ]]; then
-          # e.g. refs/heads/feature-branch-1 -> extract the last portion
-          echo "BRANCH=$(echo ${GITHUB_REF} | egrep -o "[^/]*$")" >> $GITHUB_ENV
+          # find the current branch using utility function
+          CODE="from scripts.utils import get_branch; print(get_branch())"
+          echo "BRANCH=$(python -c $CODE}) >> $GITHUB_ENV
         else
+          # use the PR branch
           echo "BRANCH=${GITHUB_BASE_REF}" >> $GITHUB_ENV
         fi
         cat ${GITHUB_ENV}
     - name: Prep Git
       run: |
-        python scripts/prep_git.py \
-          ${GITHUB_REPOSITORY} ${BRANCH}
+        python scripts/prep_git.py ${GITHUB_REPOSITORY} ${BRANCH}
     - name: Install Dependencies
       run: |
         pip install -e .[publishing,test]
@@ -93,7 +94,8 @@ jobs:
         twine upload --repository-url ${REGISTRY} --skip-existing dist/*
     - name: Extract Final Version
       run: |
-        echo "FINAL_VERSION=$(echo ${VERSION} | egrep "[0-9]+\.[0-9]+\.[0-9]+")" >> $GITHUB_ENV
+        RUNNER="python -m scripts/get_final_version.py"
+        echo "FINAL_VERSION=$(${RUNNER} ${VERSION})" >> $GITHUB_ENV
         cat ${GITHUB_ENV}
     - name: Push the commit(s) and tag(s) to the branch
       run: |
