--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -50,7 +50,9 @@ jobs:
           # find the current branch using utility function
           CODE="from scripts.utils import get_branch; print(get_branch())"
           echo $CODE
+          echo "PYTHON:"
           python -c "${CODE}"
+          echo "GIT BRANCH:"
           git branch --show-current
           echo "BRANCH=$(python -c "${CODE}")" >> $GITHUB_ENV
         else
