--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -48,8 +48,8 @@ jobs:
         pip install -e .[publishing,test]
       - name: Get Branch from environment
       run: |
-        CODE="from scripts.utils import get_branch; print(get_branch())"
-        echo "BRANCH=$(python -c "${CODE}")" >> $GITHUB_ENV
+          CODE="scripts/parse_git_ref.py ${GITHUB_REF}"
+          echo "BRANCH=$(python -m "${CODE}")" >> $GITHUB_ENV
         cat ${GITHUB_ENV}
     - name: Prep Git
       run: |
