extract out the runner script

--- a/.github/workflows/create-changelog.yml
+++ b/.github/workflows/create-changelog.yml
@@ -16,6 +16,7 @@ jobs:
     env:
        VERSION: ${{ github.event.inputs.version }}
        CHANGELOG: "CHANGELOG.md"
+       RUNNER: "python -m scripts"
     steps:
     - name: Checkout
       uses: actions/checkout@v1
@@ -44,19 +45,18 @@ jobs:
         pip install -e .[publishing,test]
     - name: Get Branch from environment
       run: |
-          CODE="scripts/parse_git_ref.py ${GITHUB_REF}"
-          echo "BRANCH=$(python -m "${CODE}")" >> $GITHUB_ENV
+          CMD="${RUNNER}.parse_git_ref ${GITHUB_REF}"
+          echo "BRANCH=$(${CMD})" >> $GITHUB_ENV
         cat ${GITHUB_ENV}
     - name: Prep Git
       run: |
-        python scripts/prep_git.py \
-          ${GITHUB_REPOSITORY} ${BRANCH}
+        ${RUNNER}.prep_git ${GITHUB_REPOSITORY} ${BRANCH}
     - name: Run the changelog prep
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        python scripts/bump_version.py ${VERSION}
-        python scripts/changelog_prep_script.py \
+        ${RUNNER}.bump_version ${VERSION}
+        ${RUNNER}.changelog_prep_script \
           ${GITHUB_REPOSITORY} ${CHANGELOG} \
           --branch upstream/${BRANCH}
         git diff
