--- a/.github/workflows/create-changelog.yml
+++ b/.github/workflows/create-changelog.yml
@@ -45,13 +45,13 @@ jobs:
         pip install -e .[publishing,test]
     - name: Initialize Environment
       run: |
-        ${RELEASE_HELPER} prep_env
+        ${RELEASE_HELPER} prep-env
         cat ${GITHUB_ENV}
     - name: Run the changelog prep
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        ${RELEASE_HELPER} prep_changelog
+        ${RELEASE_HELPER} prep-changelog
         git diff
     - name: Make a PR with the changelog entry change
       uses: peter-evans/create-pull-request@v3
