--- a/.github/workflows/create-changelog.yml
+++ b/.github/workflows/create-changelog.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Install Dependencies
       run: |
         pip install -e .[publishing,test]
+    - name: Bump the Version
+      run: |
+        ${RELEASE_HELPER} bump-version
     - name: Initialize Environment
       run: |
         ${RELEASE_HELPER} prep-env
