--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -46,6 +46,9 @@ jobs:
     - name: Install Dependencies
       run: |
         pip install -e .[publishing,test]
+    - name: Bump the Version
+      run: |
+        ${RELEASE_HELPER} bump-version
     - name: Initialize Environment
       run: |
         ${RELEASE_HELPER} prep-env
@@ -54,7 +57,7 @@ jobs:
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        ${RELEASE_HELPER} prep-release
+        ${RELEASE_HELPER} extract-changelog
         ${RELEASE_HELPER} prep-python-dist
         ${RELEASE_HELPER} finalize-release
         cat ${CHANGELOG_OUTPUT}
