--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -43,6 +43,9 @@ jobs:
     - name: Install Dependencies
       run: |
         pip install -e .[publishing,test]
+    - name: Bump the Version
+      run: |
+        ${RELEASE_HELPER} bump-version
     - name: Initialize Environment
       run: |
         ${RELEASE_HELPER} prep-env
@@ -62,7 +65,8 @@ jobs:
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        ${RELEASE_HELPER} prep-release
+        ${RELEASE_HELPER} bump-version
+        ${RELEASE_HELPER} extract-changelog
         ${RELEASE_HELPER} prep-python-dist
         ${RELEASE_HELPER} finalize-release
         cat ${CHANGELOG_OUTPUT}
