--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -68,7 +68,7 @@ jobs:
         ${RELEASE_HELPER} bump-version
         ${RELEASE_HELPER} extract-changelog
         ${RELEASE_HELPER} prep-python-dist
-        ${RELEASE_HELPER} finalize-release
+        ${RELEASE_HELPER} prep-release
         cat ${CHANGELOG_OUTPUT}
     - name: Publish PyPI Package
       env:
